--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 server.port=8000
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/java
+spring.datasource.username=anthony
+spring.datasource.password=Comm!t2me
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
